--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -40,6 +40,19 @@ main section.categories-show {
         transition: all 0.3s;
       }
 
+      aside.sold-out {
+        position: absolute;
+        top: 0;
+        left: 0;
+        padding: 10px;
+        color: #FFF;
+        background-color: #E88;
+        border-top-left-radius: 4px;
+        border-bottom-right-radius: 20px;
+        font-size: 0.8em;
+        text-transform: uppercase;
+      }
+
       aside.price {
         position: absolute;
         top: 0;
@@ -72,5 +85,3 @@ main section.products-show {
     }
   }
 }
-
-
