--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -17,6 +17,12 @@
     <% end %>
   </footer>
 
+  <% if product.quantity < 1 %>
+    <aside class="sold-out">
+      Sold Out!
+    </aside>
+  <% end %>
+
   <aside class="price">
     <%= humanized_money_with_symbol product.price %>
   </aside>
