Implement login/out

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,9 +1,9 @@
 <section class="user-register">
-
+  <h1>Register</h1>
   <%= form_for @user do |f| %>
     <p>
       <%= render "error_messages" %>
-
+    </p>
     <p>
       <%= f.label :first_name %><br>
       <%= f.text_field :first_name %>
