--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -27,6 +27,27 @@
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
+
+        <% if logged_in? %>
+
+          <li>
+            <%= link_to "Welcome, #{current_user.first_name}", "#" %>
+          </li>
+          <li>
+            <%= link_to "Log Out", logout_path, method: :delete %>
+          </li>
+
+        <% else %>
+
+          <li>
+            <%= link_to "Register", [:new_user] %>
+          </li>
+          <li>
+            <%= link_to "Log In", [:login] %>
+          </li>
+
+        <% end %>
+
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
 
@@ -38,12 +59,6 @@
             <li><%= link_to 'Products',  [:admin, :products] %></li>
             <li><%= link_to 'Categories',  [:admin, :categories] %></li>
           </ul>
-        </li>
-        <li>
-          <%= link_to "Register", [:new_user] %>
-        </li>
-        <li>
-          <%= link_to "Log In", [:new_user] %>
         </li>
         <li>
           <%= link_to cart_path do %>
