--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -24,6 +24,29 @@
           <dd><%= @product.price %></dd>
         </dl>
       </div>
+
+    </div>
+
+    <div class="row">
+      <%= render "reviews/form" %>
+    </div>
+
+    <div class="row">
+      <% if !@reviews.empty? %>
+        <p>
+          <h2>Reviews</h2>
+          <table>
+            <%= render @reviews %>
+          </table>
+        </p>
+
+      <% else %>
+
+        <p>
+          Be the first to review this item!
+        </p>
+
+      <% end %>
     </div>
 
   </article>
