--- a/app/views/reviews/_review.html.erb
+++ b/app/views/reviews/_review.html.erb
@@ -1,5 +1,12 @@
 
 <tr>
+    <td>
+  <% if logged_in? && current_user.id == review.user_id %>
+      <%= link_to "Delete", [review.product, review],
+                  method: :delete,
+                  data: { confirm: "Are you sure you want delete this review?" } %>
+  <% end %>
+      </td>
   <td><%= "#{review.user.first_name} #{review.user.last_name}" %></td>
   <td><%= review.created_at.strftime('%m/%d%Y') %><br>
       <%= review.created_at.strftime("at %I:%M%p") %></td>
