--- a/app/views/reviews/_review.html.erb
+++ b/app/views/reviews/_review.html.erb
@@ -8,8 +8,8 @@
   <% end %>
       </td>
   <td><%= "#{review.user.first_name} #{review.user.last_name}" %></td>
-  <td><%= review.created_at.strftime('%m/%d%Y') %><br>
-      <%= review.created_at.strftime("at %I:%M%p") %></td>
+  <td><%= review.created_at.strftime('%m/%d/%Y') %><br>
+      <%= review.created_at.strftime("%I:%M%p") %></td>
   <td><%= review.rating %>/5</td>
   <td><%= review.text %></td>
 </tr>
