--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -9,7 +9,7 @@ main section.categories-show {
 
     .product {
       // flex:      1;
-      max-width: 260px;
+      width: 260px;
       // so that footer within can be positioned absolutely
       position:  relative;
 
@@ -50,6 +50,7 @@ main section.categories-show {
         border-top-left-radius: 4px;
         border-bottom-right-radius: 20px;
         font-size: 0.8em;
+        font-weight: bold;
         text-transform: uppercase;
       }
 
@@ -84,4 +85,10 @@ main section.products-show {
       max-width: 100%;
     }
   }
+}
+
+.review-rating {
+
+  width: 128px;
+
 }
