--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -1,16 +1,20 @@
-<%= form_for [@product, @product.reviews.build] do |f| %>
-  <p>
-    Do you own this? Let us know what you think!
-  </p>
-  <p>
-    <%= f.label :text, "Your Thoughts" %>
-    <%= f.select :rating, [5, 4, 3, 2, 1], :prompt => "Rate This!" %>
-    <br>
-    <%= f.text_area :text %>
-  </p>
+<section class="reviews-new">
+  <br>
+  <div class="row">
+    <div class="col-sm-8 col-sm-offset-2">
+      <%= form_for [@product, @product.reviews.build] do |f| %>
 
-  <p>
-    <%= f.submit %>
-  </p>
+          <p>Do you own this? Let us know what you think!</p>
 
-<% end %>
+          <div class="form-group">
+            <%= f.label :text, "Your Thoughts" %>
+            <%= f.select :rating, [5, 4, 3, 2, 1], { :prompt => "Rate This!" }, { class: "form-control pull-right review-rating" } %>
+            <%= f.text_area :text, class: "form-control" %>
+          </div>
+
+          <%= f.submit "Submit", class: "btn btn-primary" %>
+
+      <% end %>
+    </div>
+  </div>
+</section>
