--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,34 +1,51 @@
-<section class="user-register">
-  <h1>Register</h1>
-  <%= form_for @user do |f| %>
-    <p>
-      <%= render "error_messages" %>
-    </p>
-    <p>
-      <%= f.label :first_name %><br>
-      <%= f.text_field :first_name %>
-    </p>
-    <p>
-      <%= f.label :last_name %><br>
-      <%= f.text_field :last_name %>
-    </p>
-    <p>
-      <%= f.label :email %><br>
-      <%= f.email_field :email %>
-    </p>
-    <p>
-      <%= f.label :password %><br>
-      <%= f.password_field :password %>
-    </p>
-    <p>
-      <%= f.label :password_confirmation, "Confirm password" %><br>
-      <%= f.password_field :password_confirmation %>
-    </p>
+<section class="users-new">
+  <header class="page-header">
+    <h1>Register</h1>
+  </header>
 
-    <p>
-      <%= f.submit "Create my account" %>
-    </p>
+  <div class="row">
+    <div class="col-sm-6 col-sm-offset-1">
+      <%= form_for @user do |f| %>
 
-  <% end %>
+          <% if @user.errors.any? %>
+            <div class="alert alert-danger">
+              <strong>The following errors prevented registration:</strong>
+              <ul>
+                <% @user.errors.full_messages.each do |msg| %>
+                  <li><%= msg %></li>
+                <% end %>
+              </ul>
+            </div>
+          <% end %>
 
+          <div class="form-group">
+            <%= f.label :first_name %>
+            <%= f.text_field :first_name, class: "form-control" %>
+          </div>
+
+          <div class="form-group">
+            <%= f.label :last_name %>
+            <%= f.text_field :last_name, class: "form-control" %>
+          </div>
+
+          <div class="form-group">
+            <%= f.label :email %>
+            <%= f.email_field :email, class: "form-control" %>
+          </div>
+
+          <div class="form-group">
+            <%= f.label :password %>
+            <%= f.password_field :password, class: "form-control" %>
+          </div>
+
+          <div class="form-group">
+            <%= f.label :password_confirmation, "Confirm password" %>
+            <%= f.password_field :password_confirmation, class: "form-control" %>
+          </div>
+
+          <%= f.submit "Create my account", class: "btn btn-primary" %>
+
+      <% end %>
+    </div>
+  </div>
 </section>
